--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-query-devtools": "^5.59.16",
     "antd": "^5.21.6",
+    "apexcharts": "^4.1.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
